--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -134,11 +134,11 @@
             <div class='item-img-content'>
               <%= image_tag item.image, class: "item-img" %>
 
-            <% if @items.present? %>
+            <%# 商品がない場合、soldoutを表示させる%>
               <div class='sold-out'>
                 <span>Sold Out!!</span>
               </div>
-            <% end %>
+            <%# //商品がない場合、soldoutを表示させる%>
 
             </div>
             <div class='item-info'>
