--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,11 +8,11 @@
     </h2>
     <div class="item-img-content">
       <%= image_tag @item.image ,class:"item-box-img" %>
-      <%# 商品がない場合、soldoutを表示させる%>
-      <div class="sold-out">
-        <span>Sold Out!!</span>
-      </div>
-      <%# //商品がない場合は、sold outを表示させる %>
+      <%if @item.purchase.present? %>
+        <div class="sold-out">
+          <span>Sold Out!!</span>
+        </div>
+      <% end %>
     </div>
     <div class="item-price-box">
       <span class="item-price">
@@ -23,13 +23,14 @@
       </span>
     </div>
 
-    <% if user_signed_in? && @item.present? %>
-      <% if current_user.id == @item.user.id %>
+    <% if user_signed_in? %>
+      <% if current_user.id == @item.user.id && @item.purchase.nil? %>
         <%= link_to "商品の編集", edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
         <p class="or-text">or</p>
         <%= link_to "削除", item_path(@item.id),data: { turbo_method: :delete }, class:"item-destroy" %>
+      <% elsif  @item.purchase.present? %>
       <% else %>
-        <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
+        <%= link_to "購入画面に進む", item_purchases_path(@item.id), data: { turbo: false },class:"item-red-btn"%>
       <% end %>
     <% end %>
 
