パンくずの実装

--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -1,7 +1,7 @@
 <%= include_gon %>
 
 <%= render "shared/second-header"%>
-
+<% breadcrumb :purchase %>
 <div class='transaction-contents'>
   <div class='transaction-main'>
     <h1 class='transaction-title-text'>
