--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -129,10 +129,10 @@
       <%if @items.present? %>
         <% @items.each do |item| %>
           <li class='list'>
-            <%= link_to item_path(item.id) do %>
+            <%= link_to item_path(item.id), data: { turbo: false } do %>
             <div class='item-img-content'>
               <% if item.image.present? %>
-              <%= image_tag item.image, class: "item-img" %>
+              <%= image_tag item.image, data: { turbo: false }, class: "item-img" %>
               <% end %>
             
             <%if item.purchase.present? %>
